frontend: fix 100vh in mobile webkit
Some elements display larger than 100vh on mobile WebKit,
causing for example the Settings button in the sidebar to be
out of the view.

WebKit should support -webkit-fill-available so that the correct
max height is set, keeping 100vh as fallback.

frontend: test larger base font size

Some elements such as select dropdowns zoom in on focus on
mobile WebKit.

This is only a test.

frontend: fix sidebar height on webkit

Bottom has still a gap.

--- a/frontends/web/src/style/variables.css
+++ b/frontends/web/src/style/variables.css
@@ -193,5 +193,6 @@
         --size-title: 16px;
 
         --size-wizard-text: 14px;
+        --size-default: 16px;
     }
 }
